--- a/src/Rover.Test/MarsRover.Test.csproj
+++ b/src/Rover.Test/MarsRover.Test.csproj
@@ -55,7 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoverTest.cs" />
     <Compile Include="TerrainTest.cs" />
+    <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rover\MarsRover.csproj">
